@@ -19,6 +19,22 @@
     permission="zope2.View"
   />
 
+  <browser:pages
+    for="..interfaces.IStory"
+    class=".wfactions.WFActions"
+    layer="..interfaces.IBrowserLayer"
+    permission="zope2.View">
+      <browser:page
+        attribute="wf_actions"
+        name="wf_actions"
+      />
+      <browser:page
+        attribute="change_status"
+        name="change_status"
+      />
+  </browser:pages>
+
+
   <browser:page
     for="*"
     name="simpemanagement-macros"
