@@ -26,7 +26,8 @@
       <metal:assignes
           use-macro="context/simpemanagement-macros/assignees" />
 
-      <div id="booking-form" class="clearfix">
+      <div tal:condition="view/user_can_booking"
+           id="booking-form" class="clearfix">
         <h2 i18n:translate="">Add Booking</h2>
         <div tal:content="structure view/form_contents" />
       </div>
